// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`question answering insight analytics actions > when analyticsMode is \`next\` > should log #logCollapseSmartSnippet with the case payload 1`] = `
[
  "Qna.AnswerAction",
  {
    "action": "collapse",
    "answer": {
      "responseId": "456",
      "type": "SmartSnippet",
    },
  },
]
`;

exports[`question answering insight analytics actions > when analyticsMode is \`next\` > should log #logCollapseSmartSnippetSuggestion with the right payload 1`] = `
[
  "Qna.AnswerAction",
  {
    "action": "collapse",
    "answer": {
      "responseId": "456",
      "type": "SmartSnippetSuggestion",
    },
  },
]
`;

exports[`question answering insight analytics actions > when analyticsMode is \`next\` > should log #logDislikeSmartSnippet with the case payload 1`] = `
[
  "Qna.AnswerAction",
  {
    "action": "dislike",
    "answer": {
      "responseId": "456",
      "type": "SmartSnippet",
    },
  },
]
`;

exports[`question answering insight analytics actions > when analyticsMode is \`next\` > should log #logExpandSmartSnippet with the case payload 1`] = `
[
  "Qna.AnswerAction",
  {
    "action": "expand",
    "answer": {
      "responseId": "456",
      "type": "SmartSnippet",
    },
  },
]
`;

exports[`question answering insight analytics actions > when analyticsMode is \`next\` > should log #logExpandSmartSnippetSuggestion with the right payload 1`] = `
[
  "Qna.AnswerAction",
  {
    "action": "expand",
    "answer": {
      "responseId": "456",
      "type": "SmartSnippetSuggestion",
    },
  },
]
`;

exports[`question answering insight analytics actions > when analyticsMode is \`next\` > should log #logLikeSmartSnippet with the case payload 1`] = `
[
  "Qna.AnswerAction",
  {
    "action": "like",
    "answer": {
      "responseId": "456",
      "type": "SmartSnippet",
    },
  },
]
`;

exports[`question answering insight analytics actions > when analyticsMode is \`next\` > should log #logOpenSmartSnippetInlineLink with the right payload 1`] = `
[
  "Qna.CitationClick",
  {
    "answer": {
      "responseId": "456",
      "type": "SmartSnippet",
    },
    "citation": {
      "id": "example permanent id",
      "type": "InlineLink",
    },
  },
]
`;

exports[`question answering insight analytics actions > when analyticsMode is \`next\` > should log #logOpenSmartSnippetSource with the right payload 1`] = `
[
  "Qna.CitationClick",
  {
    "answer": {
      "responseId": "456",
      "type": "SmartSnippet",
    },
    "citation": {
      "id": "example permanent id",
      "type": "Source",
    },
  },
]
`;

exports[`question answering insight analytics actions > when analyticsMode is \`next\` > should log #logOpenSmartSnippetSuggestionInlineLink with the right payload 1`] = `
[
  "Qna.CitationClick",
  {
    "answer": {
      "responseId": "456",
      "type": "SmartSnippetSuggestion",
    },
    "citation": {
      "id": "example permanent id",
      "type": "InlineLink",
    },
  },
]
`;

exports[`question answering insight analytics actions > when analyticsMode is \`next\` > should log #logOpenSmartSnippetSuggestionSource with the right payload 1`] = `
[
  "Qna.CitationClick",
  {
    "answer": {
      "responseId": "456",
      "type": "SmartSnippetSuggestion",
    },
    "citation": {
      "id": "example permanent id",
      "type": "Source",
    },
  },
]
`;

exports[`question answering insight analytics actions > when analyticsMode is \`next\` > should log #logSmartSnippetDetailedFeedback with the right payload 1`] = `
[
  "Qna.SubmitSmartSnippetFeedback",
  {
    "answer": {
      "responseId": "456",
    },
    "feedback": {
      "details": "example feedback details",
      "reason": "other",
    },
  },
]
`;

exports[`question answering insight analytics actions > when analyticsMode is \`next\` > should log #logSmartSnippetFeedback with the right payload 1`] = `
[
  "Qna.SubmitSmartSnippetFeedback",
  {
    "answer": {
      "responseId": "456",
    },
    "feedback": {
      "reason": "does_not_answer",
    },
  },
]
`;
